--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /Beat/.vs
+/Beat/Beat/bin
+/Beat/Beat/obj/Debug
+/Beat/packages
